TouchPad compatibility fix 0

--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "start": "http-server -p 8080",
     "build": "mkdir -p dist && cp -r src/* dist/"
   },
+  "keywords": [
+    "enyo",
+    "bejeweled",
+    "game"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "bower": "^1.8.14",
     "http-server": "^14.1.1"
